Added SignMenu for Answers (Issue #7)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: de.thelooter.iosteinpolls.IOSteinPolls
 api-version: 1.18
 authors: [ thelooter ]
-depend: ["ProtocolLib"]
+depend: [ProtocolLib]
 
 commands:
   poll:
